Use common feature gates across charts (#770)
