# charts/kubedb-kubestash-catalog/values.openapiv3_schema.yaml
@@ -8,8 +8,6 @@ properties:
           args:
             type: string
         type: object
-      enabled:
-        type: boolean
       restore:
         properties:
           args:
@@ -17,8 +15,11 @@ properties:
         type: object
     required:
     - backup
-    - enabled
     - restore
+    type: object
+  featureGates:
+    additionalProperties:
+      type: boolean
     type: object
   kubedbmanifest:
     properties:
@@ -35,8 +36,6 @@ properties:
           args:
             type: string
         type: object
-      enabled:
-        type: boolean
       maxConcurrency:
         format: int32
         type: integer
@@ -47,7 +46,6 @@ properties:
         type: object
     required:
     - backup
-    - enabled
     - maxConcurrency
     - restore
     type: object
@@ -59,8 +57,6 @@ properties:
           args:
             type: string
         type: object
-      enabled:
-        type: boolean
       restore:
         properties:
           args:
@@ -68,7 +64,6 @@ properties:
         type: object
     required:
     - backup
-    - enabled
     - restore
     type: object
   opensearch:
@@ -79,8 +74,6 @@ properties:
           args:
             type: string
         type: object
-      enabled:
-        type: boolean
       restore:
         properties:
           args:
@@ -88,7 +81,6 @@ properties:
         type: object
     required:
     - backup
-    - enabled
     - restore
     type: object
   postgres:
@@ -101,8 +93,6 @@ properties:
           cmd:
             type: string
         type: object
-      enabled:
-        type: boolean
       restore:
         properties:
           args:
@@ -110,7 +100,6 @@ properties:
         type: object
     required:
     - backup
-    - enabled
     - restore
     type: object
   proxies:
@@ -139,8 +128,6 @@ properties:
           args:
             type: string
         type: object
-      enabled:
-        type: boolean
       restore:
         properties:
           args:
@@ -148,7 +135,6 @@ properties:
         type: object
     required:
     - backup
-    - enabled
     - restore
     type: object
   waitTimeout:
@@ -156,6 +142,7 @@ properties:
     type: integer
 required:
 - elasticsearch
+- featureGates
 - kubedbmanifest
 - mongodb
 - mysql
